--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,6 +1,6 @@
 name: Towny-BlueMap
 version: 0.1.0
-main: com.github.Jena.TownyBlueMain
+main: com.github.Jena.TownyBlue
 api-version: 1.16
 author: Jena
 depend: [BlueMap, Towny]
