--- a/src/config.yml
+++ b/src/config.yml
@@ -1,2 +1,5 @@
-html: <b>%name%</b>
+html: <center><b>%name%</b><br>%nation%</b><hr>%residents%</center>
 y-height: 62
+home-marker: https://i.imgur.com/uzklZMv.png
+capital-marker: https://i.imgur.com/51isVaU.png
+max-distance: 375
