--- a/src/config.yml
+++ b/src/config.yml
@@ -3,3 +3,4 @@ y-height: 62
 home-marker: https://i.imgur.com/uzklZMv.png
 capital-marker: https://i.imgur.com/51isVaU.png
 max-distance: 375
+debug: true
