--- a/src/config.yml
+++ b/src/config.yml
@@ -1,6 +1,19 @@
+
+# Html on the label, see what the default values look like here https://gyazo.com/91fb41d565cdfe35fa666aaf22823076
+# Valid Placeholders are: %name%, %nation%, %mayor%, %residents%, %residentcount%.
 html: <center><b>%name%</b><br>%nation%</b><hr>%residents%</center>
+
+# How high town borders are
 y-height: 62
+# How much higher/lower Town markers are in relation to the borders
+marker-offset: 1
+
+# Image URLS, capital-marker is for nation capitals.
 home-marker: https://i.imgur.com/uzklZMv.png
 capital-marker: https://i.imgur.com/51isVaU.png
+
+# Maximum distance Home/Capital Markers can be seen from
 max-distance: 375
-debug: true
+
+# Made by Jena-bot, send me a message on discord! Jena#4092
+# if you want support for this alpha build check out https://discord.gg/zmkyJa3
